--- a/aip.tex
+++ b/aip.tex
@@ -44,6 +44,7 @@ TO DO LIST:
       \item In the definition of least positive residue; it would be OK to leave it alone, or replace it with anything else.
       \pedro[inline]{Changed to $a$ and $b$.}
       \item $\vv{m}$ appears in the proofs of \Cref{optimal division: L,ILL: T}; again it would be OK to leave it alone, or replace it with anything else.
+      \emily[inline]{Like $\mathfrak{m}$, I am OK using this notation; I don't think it is confusing since vectors all have the same notation.}
       \item In \Cref{colon-product-stabilization: L} and in the proof of \Cref{monomial-noetherian-decomposition: L}. Those would need to be replaced.
    \end{itemize}
    %It also appeared in the general discussion of optimization, but I replaced it with $n$, as our optimization problems are in $\RR^n$ and $\ZZ^n$.   
@@ -108,10 +109,11 @@ TO DO LIST:
 %      \item[$\Box$] Does 7.10 come from 7.3, if we replace 1 with $q$ and $\IP$ with $\IP_p$? If so, we should write the proof this way, and replace the comment preceding 7.11 with a remark (that makes clear the reduction to the small case)
       \item[$\Box$] Does Corollary 8.3 come from 7.10 too?
       \item[$\Box$] Identify where ``equal'' and ``equivalent'' linear/integer programs are pointed out, and define this at that point.
+   \emily[inline]{This only seems to happen with $\Pi$ and $\Pi_p$ when the arithmetic constraint is automatically satisfied.  I think that the meaning will be clear to the reader, and I don't think we need to make it any more explicit by distinguishing between ``equal'' and ``equivalent.''}  
     \item[$\Box$] Put ``titles'' in appropriate statements. 
    \end{itemize}
 }
-
+% 
 
 
 \newpage
@@ -439,9 +441,11 @@ is the critical exponent of $\ideala$ with respect to $\idealb$.
    \[ \mu(\ideala_p, \idealb_p, p^e) = \ft{\ideala}{\idealb} \cdot p^e - \sum_{s=1}^{e} \epsilon(\ideala, \idealb, r, s) \cdot p^{e-s}.\]
 \end{theorem}
 
-\emily[inline]{New: Add what we can say about critical exponents.}
-\emily[inline]{New: Explain that our method replaces an arbitrary $\idealb$ with a diagonal ideal.}
+\emily[inline]{Add what we can say about critical exponents.}
+\emily[inline]{Explain that our method replaces an arbitrary $\idealb$ with a diagonal ideal.}
 
+
+\todo[inline]{Add conventions for $p,q,\kk,\mathfrak{m}$, etc}
 
 
 \newpage
@@ -506,7 +510,7 @@ If $A$ is a $\numvars \times n$ monomial matrix, then we call $\ZZ^n$ the \emph{
  As in \Cref{monomial matrix ideal: R}, we may associate to each ideal pair $(\ideala, \ideald)$ in $\kk[x_1, \ldots, x_{\numvars}]$ a monomial pair $(A, \vv{u})$.  Observe that, though there need not be a canonical choice for the $m \times n$ matrix $A$, the positive point $\vv{u} \in \ZZ^m$ is uniquely determined by the diagonal ideal $\ideald$.
 \end{remark}
 
-\subsection{Optimization}  Optimization problems play a central role in this paper.  Here, we briefly recall the basic framework of standard \emph{programming}.
+\subsection{Optimization} \label{optimization: S}  Optimization problems play a central role in this paper.  Here, we briefly recall the basic framework of standard \emph{programming}.
 
 Suppose that $\mathcal{X}$ is either $\RR^n$ or $\ZZ^n$.  By a \emph{program $\Omega$ in the ambient space $\mathcal{X}$}, we mean an optimization problem seeking to maximize some given linear \emph{objective function} $\RR^n \to \RR$ on some subset of $\mathcal{X}$ defined by a system of linear inequalities, called the \emph{constraints} of the program $\Omega$. If $\mathcal{X} = \RR^n$, then the points in $\mathcal{X}$ satisfying these constraints define a polyhedron in $\RR^n$, while if $\mathcal{X} = \ZZ^n$, then the points in $\mathcal{X}$ satisfying these constraints instead consist of the lattice points in some polyhedron in $\RR^n$.  In either case, we call this set of points in $\mathcal{X}$ the \emph{feasible set} of the program.  We denote it by $\feas \Omega$, and say that the points in this set are \emph{feasible} for the program $\Omega$.
 
@@ -622,7 +626,7 @@ The value of $\LP(A, \vv{u})$ equals the $F$-threshold $\ft{\ideala}{\ideald}$.
 
 \subsection{Relations with arithmetic and fractal programs}
 
- We now turn our attention to the integers $\mu(\ideala, \ideald, p^e)$ and rational numbers $\crit(\ideala,\ideald)$.  First, recall that for each $q$ a power of $p$, the integer $\mu(\ideala, \ideald, q)$ is defined as 
+ We now turn our attention to the integers $\mu(\ideala, \ideald, p^e)$ and rational numbers $\crit(\ideala,\ideald)$, \emily{We will reduce the general case to this one$\ldots$}.  First, recall that for each $q$ a power of $p$, the integer $\mu(\ideala, \ideald, q)$ is defined as 
 \[\mu(\ideala,\ideald,q) \coloneqq \max\big\{ \ell \in \NN : \ideala^{[\ell]} \not\subseteq \ideald^{[q]}\big\},\]
 where $\ideala^{[\ell]}$ is the $\ell$-th (generalized) Frobenius power of $\ideala$.
 
@@ -656,7 +660,7 @@ $\binom{n}{\vv{n}}\equiv \binom{n_0}{\vv{n}_0}\binom{n_1}{\vv{n}_1}\cdots \binom
 In particular, the multinomial coefficient $\binom{n}{\vv{n}}$ is nonzero mod $p$ if and only if $\norm{\vv{n}_e}=n_e$ for each $e$, a condition that is sometimes described by saying that the entries of the vector $\vv{n} \in \NN$ sum to $n$ \emph{without carrying} in base $p$.
 
 In light of this, the arithmetic constraint in \Cref{aip: D} is equivalent to the following condition:  If
- $\vv{k} = \vv{k}_0 + \vv{k}_1 \, p\cdots + \vv{k}_t \, p^s$ is the base $p$ expansion of the nonnegative lattice point $\vv{k}$, then $\norm{\vv{k}_e} < p$ for all $0 \leq e \leq t$.
+ $\vv{k} = \vv{k}_0 + \vv{k}_1 \, p\cdots + \vv{k}_s \, p^s$ is the base $p$ expansion of the nonnegative lattice point $\vv{k}$, then $\norm{\vv{k}_e} < p$ for all $0 \leq e \leq s$.
 \end{remark}
 
 Clearly, the feasible set of $\IP_p(A, \vv{u}, q)$ lies in the feasible set of $\IP(A, \vv{u},q)$, and hence, is finite.  
@@ -1063,6 +1067,8 @@ and equality holds if and only if $s_i = 0$ whenever $\vv{a}_i \notin \O$.
    Then $\vv{w} \in \conv(\col(A)\cap \O) \subseteq \O$, and therefore $\iprod{\defpt}{\vv{w}} = \alpha$.
    As $\iprod{\defpt}{\vv{v}-\vv{w}} = 0$, the nonnegativity of $\vv{v} - \vv{w}$ and $\defpt$ implies that $\vv{v} - \vv{w} \in \cone(\rb(\O))$, showing that $\vv{v} \in \conv( \col(A) \cap \O ) + \cone(\rb(\O))$.
 \end{proof}
+
+\emily[inline]{Is there a reason that we are defining $\rb \O$ here, instead of before \Cref{prop: MW for faces}, right above (where it is defined in the statement)?}
 
 \begin{definition}[Recession basis and subspace]
    If $\defpt \in \RR^\numvars$ defines $\O$, then the \emph{recession basis} of $\O$ is the set $\rb(\O)$ of all standard basis vectors $\canvec_i$ in $\RR^\numvars$ such that the $i$-th coordinate of $\defpt$ is zero, and the \emph{recession subspace} of $\O$ is the subspace $\rs(\O)$ of $\RR^\numvars$ spanned by $\rb(\O)$.
@@ -2908,11 +2914,9 @@ We now address the last assertion:  If $A$ satisfies these additional conditions
 \emily[inline]{It seems like we prove that $\mu(A, \vv{u}, q) = \mu(\collapse{A}, \collapse{\vv{u}}, q)$.  Let's make sure to state that later\daniel[inline]{I guess this will be an analog of \Cref{leftover p large: R}}}
 
 
-\emily[inline]{New:
-
 \begin{theorem}
    \label{diagonal-mu-theorem: T}
-   Given a monomial ideal $\ideala$ of $\QQ[x_1, \ldots, x_\numvars]$, there exists a positive integer $\ell = \ell(\ideala)$, and for every positive $\vv{u} \in \NN^\numvars$ with $\ideala \subseteq \ideald = \diag(\vv{u})$, and for every integer $1 \leq r < \ell$ relatively prime to $\ell$, there exist a positive integer $\beta = \beta(\ideala, \vv{u})$ and a sequence $\big(\epsilon(\ideala, \vv{u}, r, e)\big)_{e=1}^{\infty}$ of nonnegative rational numbers satisfying the following conditions.
+   Given a monomial ideal $\ideala$ of $\QQ[x_1, \ldots, x_\numvars]$, there exists a positive integer $\ell = \ell(\ideala)$, and for every positive $\vv{u} \in \NN^\numvars$ with $\ideala \subseteq \ideald = \ideal{ x_1^{u_1}, \ldots, x_m^{u_m} }$, and for every integer $1 \leq r < \ell$ relatively prime to $\ell$, there exist a positive integer $\beta = \beta(\ideala, \vv{u})$ and a sequence $\big(\epsilon(\ideala, \vv{u}, r, e)\big)_{e=1}^{\infty}$ of nonnegative rational numbers satisfying the following conditions.
    If $p > \beta$ and $p \equiv r \bmod \ell$, then
    \[ \mu(\ideala_p, \ideald_p, p^e) = \ft{\ideala_p}{\ideald_p} \cdot p^e - \sum_{s=1}^{e} \epsilon(\ideala, \vv{u}, r, s) \cdot p^{e-s}.\]
 \end{theorem}
@@ -2922,7 +2926,7 @@ We now address the last assertion:  If $A$ satisfies these additional conditions
 
 Finally, as mentioned earlier, our main theorem,\Cref{general-mu-theorem: T}, can be reduced to \Cref{diagonal-mu-theorem: T}, as proven at the end of  
 \Cref{monomial-reduction: A}.
-}
+
 
 \newpage
 
@@ -2939,7 +2943,7 @@ The purpose of this appendix is to describe the behavior of the monomials contai
 If $\kk$ is a field and $I$ is an ideal of $\kk[x_1, \ldots, x_\numvars]$, then $\mon(I)$ is the ideal generated by the monomials in $I$. % That is, \[ \mon(I) = \langle x^{\vv{u}}: x^{\vv{u}} \in I \rangle \subseteq \kk[x_1, \ldots, x_\numvars].\]
 \end{definition}
 
-The following theorem, a generalization of \cite[Lemma 6.1]{budur+mustata+saito.roots_bs_polys_monomial}, is the main result of \Cref{monomial-reduction: A}.  This appendix concludes by applying the results herein to prove our main theorem, \Cref{general-mu-theorem: T}, by reducing it to the setting in which $\idealb$ is a monomial ideal of the form $\diag(\vv{u})$, with $\vv{u} > \vv{0}$; i.e., reduce it to \Cref{diagonal-mu-theorem: T}.
+The following theorem, a generalization of \cite[Lemma 6.1]{budur+mustata+saito.roots_bs_polys_monomial}, is the main result of \Cref{monomial-reduction: A}.  This appendix concludes by applying the results herein to prove our main theorem, \Cref{general-mu-theorem: T}, by reducing it to the setting in which $\idealb$ is a monomial ideal of the form, for $\vv{u} > \vv{0}$, $\ideald = \ideal{x_1^{u_1}, \ldots, x_m^{u_m}}$; i.e., reduce it to \Cref{diagonal-mu-theorem: T}.
 
 
 \begin{theorem}
@@ -3167,7 +3171,7 @@ Finally, we are equipped to prove \Cref{general-mu-theorem: T} from \Cref{diagon
 \begin{proof}[Proof of \Cref{general-mu-theorem: T}]
 It suffices to show that there exist $\beta = \beta(\ideala,\idealb)$ and $t \geq 1$  for which the following holds: 
 If $p > \beta$, then for all $e\geq1$, 
-\[ \mu(\ideala_p, \idealb_p, p^e)= \mu(\ideala_p, \ideald_p, p^e) \]  where $\widetilde{\ideala}$ and $\ideald = \diag(\vv{u})$, for some positive $\vv{u} \in \NN^t$,  are ideals of $\QQ[x_1, \ldots, x_t]$.
+\[ \mu(\ideala_p, \idealb_p, p^e)= \mu(\ideala_p, \ideald_p, p^e) \]  where $\widetilde{\ideala}$ and $\ideald = \ideal{x_1^{u_1}, \ldots, x_t^{u_t}}$, for some positive $\vv{u} \in \NN^t$,  are ideals of $\QQ[x_1, \ldots, x_t]$.
 Indeed, after possibly enlarging $\beta$,  \Cref{diagonal-mu-theorem: T}
 gives the desired conclusion.
 
@@ -3176,7 +3180,7 @@ The monomial ideal $\idealc$ can be written as the intersection of finitely many
 Thus, $\ideala_p^{[N]}$ is contained in $\idealc_p^{[p^e]}$ if and only if it is contained in all  $(I_{\vv{w}})_p^{[p^e]}$, so $\mu(\ideala_p, \idealb_p, p^e) = \mu(\ideala_p, \idealc_p, p^e)$ is the maximum among the  $\mu(\ideala_p, (I_\vv{w})_p, p^e)$.
 Hence, after possibly reordering the variables, we conclude that $\mu(\ideala_p, \idealb_p, p^e) = \mu(\ideala_p, I_p, p^e )$, where $I = \ideal{x_1^{w_1}, \ldots, x_t^{w_t}}$ for some $1 \leq t \leq \numvars$, and $w_1, \ldots, w_t \geq 1$.
 
-Let $\widetilde{\ideala}$ be the ideal of $\QQ[x_1, \ldots, x_t]$ of elements of $\ideala$, after setting $x_i$ to $1$, for $t < i \leq \numvars$, and let $\ideald = \ideal{x_1^{w_1}, \ldots, x_t^{w_t}}= \diag(w_1, \ldots, w_t)$ in this ring.
+Let $\widetilde{\ideala}$ be the ideal of $\QQ[x_1, \ldots, x_t]$ of elements of $\ideala$, after setting $x_i$ to $1$, for $t < i \leq \numvars$, and let $\ideald = \ideal{x_1^{w_1}, \ldots, x_t^{w_t}}$ in this ring.
 It is straightforward to check that $\ideala_p^{[N]} \subseteq I_p^{[p^e]}$ if and only if  $(\widetilde{\ideala})_p^{[N]} \subseteq \ideald_p^{[p^e]}$, so that $\mu(\ideala_p, \idealb_p, p^e) = \mu(\widetilde{\ideala}_p, \ideald_p, p^e)$.
 \end{proof}
 
@@ -3185,6 +3189,8 @@ It is straightforward to check that $\ideala_p^{[N]} \subseteq I_p^{[p^e]}$ if a
 
 \newpage
 \section{Frobenius powers of monomial ideals}
+
+\emily[inline]{The notation $\diag(-)$ used below is outdated.}
 
 
 {\color{green}
